radix-transactions/tests/assets/manifest_generator_error_invalid_sub_transaction_id_1.rtm
USE_CHILD
    NamedIntent("my_child")
    Intent("subtxid_sim1___oops_this_is_invalid")
;